@@ -171,16 +171,8 @@ function simple_complex_validate_test_cli()
                 'alternativeEnum' => [
                     null,
                 ],
-               /* 'listItemPrototype' => [
-                    'string',
-                    'alternativeEnum' => [
-                        // Correctly defined as un-nested array.
-                        true,
-                        false,
-                    ]
-                ],*/
                 'listItems' => [
-                    'minOccur' => 1,
+                    'minOccur' => 0,
                     'maxOccur' => 5,
                     'itemRuleSet' => [
                         'string',
@@ -188,7 +180,6 @@ function simple_complex_validate_test_cli()
                             // Correctly defined as un-nested array.
                             true,
                             false,
-                            null,
                         ]
                     ]
                 ]
@@ -258,8 +249,6 @@ class Bicycle
         $this->saddle = $saddle;
         $this->sound = $sound;
         $this->accessories = $accessories;
-        if ($various) {
-            $this->various = $various;
-        }
+        $this->various = $various;
     }
 }
